k8s/weather-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: weather-ingress
  namespace: weather
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  tls:
  - hosts:
    - dotnetconfdemo.westeurope.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: dotnetconfdemo.westeurope.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: weather
          servicePort: 80
        path: /
